fix(GraphicEvolution): avoid side effect on decomposition